--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.0",
     "axios": "^0.19.2",
     "formik": "^2.1.2",
+    "jwt-decode": "^2.2.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
