--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-side-effect": "^2.1.0",
     "serialize-javascript": "^2.1.2",
     "typescript": "~3.7.2",
     "yup": "^0.28.0"
