--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-side-effect": "^2.1.0",
+    "react-youtube": "^7.9.0",
     "serialize-javascript": "^2.1.2",
     "typescript": "~3.7.2",
     "yup": "^0.28.0"
