--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.1.2",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.13.0",
+    "notistack": "^0.9.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-google-recaptcha": "^2.0.1",
