--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "serialize-javascript": "^2.1.2",
     "slate": "0.47.8",
     "slate-html-serializer": "0.8.10",
+    "slate-lists": "^1.0.0",
     "slate-react": "0.22.9",
     "typescript": "~3.7.2",
     "yup": "^0.28.0"
