--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formik": "^2.1.2",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
+    "mui-datatables": "^2.14.0",
     "node-sass": "^4.13.0",
     "notistack": "^0.9.7",
     "react": "^16.12.0",
