--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "slate-lists": "^1.0.0",
     "slate-react": "0.22.9",
     "typescript": "~3.7.2",
+    "uuid": "^7.0.1",
     "yup": "^0.28.0"
   },
   "scripts": {
