--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "mui-datatables": "^2.14.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "notistack": "^0.9.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-google-recaptcha": "^2.0.1",
     "react-helmet": "^5.2.1",
+    "react-image-gallery": "^1.0.6",
     "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
