--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/slate-react": "^0.22.9",
+    "add": "^2.0.6",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "formik": "^2.1.2",
@@ -28,7 +29,9 @@
     "react-dom": "^16.12.0",
     "react-google-recaptcha": "^2.0.1",
     "react-helmet": "^5.2.1",
+    "react-images": "^1.1.0-beta.3",
     "react-moment": "^0.9.7",
+    "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
     "react-scripts": "^3.4.0",
@@ -41,6 +44,7 @@
     "slate-react": "0.22.9",
     "typescript": "~3.7.2",
     "uuid": "^7.0.1",
+    "yarn": "^1.22.0",
     "yup": "^0.28.0"
   },
   "scripts": {
