--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/slate-react": "^0.22.9",
     "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "formik": "^2.1.2",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
