--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bip-ui",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
     "@convertkit/slate-lists": "^0.2.5",
@@ -19,6 +19,7 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "formik": "^2.1.2",
+    "history": "^4.10.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "mui-datatables": "^2.14.0",
@@ -26,6 +27,7 @@
     "notistack": "^0.9.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-ga": "^2.7.0",
     "react-google-recaptcha": "^2.0.1",
     "react-helmet": "^5.2.1",
     "react-moment": "^0.9.7",
