--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "formik": "^2.1.2",
-    "history": "^4.10.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "mui-datatables": "^2.14.0",
@@ -27,12 +26,11 @@
     "notistack": "^0.9.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-ga": "^2.7.0",
     "react-google-recaptcha": "^2.0.1",
     "react-helmet": "^5.2.1",
     "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.0",
     "react-side-effect": "^2.1.0",
     "react-youtube": "^7.9.0",
     "serialize-javascript": "^2.1.2",
