--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-helmet": "^5.2.1",
     "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
+    "react-router-hash-link": "^1.2.2",
     "react-scripts": "^3.4.0",
     "react-side-effect": "^2.1.0",
     "react-youtube": "^7.9.0",
