--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "notistack": "^0.9.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-dropzone": "^10.2.1",
     "react-google-recaptcha": "^2.0.1",
     "react-helmet": "^5.2.1",
     "react-images": "^1.1.0-beta.3",
