--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
     "react-scripts": "^3.4.0",
+    "react-scroll-up-button": "^1.6.4",
     "react-side-effect": "^2.1.0",
     "react-youtube": "^7.9.0",
     "reaptcha": "^1.7.2",
