--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@convertkit/slate-lists": "^0.2.5",
+    "@date-io/date-fns": "1.x",
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.41",
+    "@material-ui/pickers": "^3.2.10",
     "@mui-treasury/layout": "^3.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -18,6 +20,7 @@
     "@types/slate-react": "^0.22.9",
     "add": "^2.0.6",
     "axios": "^0.19.2",
+    "date-fns": "^2.10.0",
     "dotenv": "^8.2.0",
     "formik": "^2.1.2",
     "jwt-decode": "^2.2.0",
