--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-helmet": "^5.2.1",
     "react-images": "^1.1.0-beta.3",
     "react-moment": "^0.9.7",
+    "react-native-rss-parser": "^1.4.0",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
