--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-scripts": "^3.4.0",
     "react-side-effect": "^2.1.0",
     "react-youtube": "^7.9.0",
+    "reaptcha": "^1.7.2",
     "serialize-javascript": "^2.1.2",
     "slate": "0.47.8",
     "slate-html-serializer": "0.8.10",
