--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@convertkit/slate-lists": "^0.2.5",
     "@date-io/date-fns": "1.x",
+    "@honeybadger-io/react": "^0.0.6",
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.41",
