--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@types/slate-react": "^0.22.9",
     "add": "^2.0.6",
     "axios": "^0.19.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
     "date-fns": "^2.10.0",
     "dotenv": "^8.2.0",
     "formik": "^2.1.2",
@@ -40,6 +43,7 @@
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
+    "react-router-sitemap": "^1.2.0",
     "react-scripts": "^3.4.0",
     "react-scroll-up-button": "^1.6.4",
     "react-side-effect": "^2.1.0",
