--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "reaptcha": "^1.7.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "serialize-javascript": "^2.1.2",
     "slate": "0.47.8",
     "slate-html-serializer": "0.8.10",
