--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-side-effect": "^2.1.0",
     "react-youtube": "^7.9.0",
     "reaptcha": "^1.7.2",
+    "recharts": "^1.8.5",
     "serialize-javascript": "^2.1.2",
     "slate": "0.47.8",
     "slate-html-serializer": "0.8.10",
@@ -56,7 +57,7 @@
     "yup": "^0.28.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3008 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
