--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "slate-html-serializer": "0.8.10",
     "slate-lists": "^1.0.0",
     "slate-react": "0.22.9",
+    "styled-components": "^5.1.1",
     "typescript": "~3.7.2",
     "underscore": "^1.10.2",
     "uuid": "^7.0.1",
@@ -94,7 +95,7 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-react": "^7.19.0",
-    "prettier": "^2.0.4",
+    "prettier": "^2.0.5",
     "redux-devtools-extension": "^2.13.8",
     "tslint-config-sst": "^2.0.0"
   }
